k8s/mysql-service-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h # <-- Tem que ter o mesmo nome do serviceName do statefulset
spec:
  selector:
    app: mysql
  ports: 
    - port: 3306 
  clusterIP: None # <-- Resolve via DNS
