k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: ClusterIP
  ports: 
  - name: goservice-service
    port: 80 # Porta do service
    targetPort: 80 # Porta do container
    protocol: TCP
